--- a/src/Magazin.form
+++ b/src/Magazin.form
@@ -25,20 +25,25 @@
               <text value=""/>
             </properties>
           </component>
-          <component id="a3635" class="javax.swing.JTable" binding="inventar" custom-create="true">
+          <scrollpane id="b721">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties>
-              <background color="-1118482"/>
-              <font name="JetBrains Mono ExtraBold" size="12" style="1"/>
-              <foreground color="-16777216"/>
-              <gridColor color="-1118482"/>
-              <selectionBackground color="-11579054"/>
-            </properties>
-          </component>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="a3635" class="javax.swing.JTable" binding="inventar" custom-create="true">
+                <constraints/>
+                <properties>
+                  <background color="-1118482"/>
+                  <font name="JetBrains Mono ExtraBold" size="12" style="1"/>
+                  <foreground color="-16777216"/>
+                  <gridColor color="-1118482"/>
+                  <selectionBackground color="-11579054"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
       <grid id="b4b1c" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -49,21 +54,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="eb748" class="javax.swing.JTable" binding="cumparaturi" custom-create="true">
-            <constraints>
-              <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="50"/>
-              </grid>
-            </constraints>
-            <properties>
-              <background color="-1118482"/>
-              <font name="JetBrains Mono ExtraBold" size="12" style="1"/>
-              <foreground color="-16777216"/>
-              <gridColor color="-1118482"/>
-              <selectionBackground color="-11579054"/>
-              <selectionForeground color="-4473925"/>
-            </properties>
-          </component>
           <component id="1d43c" class="javax.swing.JButton" binding="btnAdauga">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -105,6 +95,26 @@
               <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
+          <scrollpane id="4314f">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="eb748" class="javax.swing.JTable" binding="cumparaturi" custom-create="true">
+                <constraints/>
+                <properties>
+                  <background color="-12828863"/>
+                  <font name="JetBrains Mono ExtraBold" size="12" style="1"/>
+                  <foreground color="-4473925"/>
+                  <gridColor color="-11579054"/>
+                  <selectionBackground color="-11833681"/>
+                  <selectionForeground color="-4473925"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
     </children>
